--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-playlist-master",
+  "name": "node-js-todo-app",
   "version": "1.0.0",
-  "description": "a little todo app",
+  "description": "a Todo application to keep track of todo items.",
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -13,6 +13,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "me",
+  "author": "Maan Singh",
   "license": "ISC"
 }
